[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"
authors = ["Valentin Bersier <vbersier@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
itertools = "0.10"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
