[package]
name = "aoc_202x"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
itertools = "0.12"
nom = "7"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
