[package]
name = "aoc_202x"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]

[dependencies]
anyhow = "1.0.93"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
itertools = "0.13"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
winnow = "0.6"
